Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-102588

MediaMetaData.Duration not updated

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 6.3.1, 6.4.0 Beta1
    • 6.3.0
    • Multimedia
    • None
    • Linux/X11
    • fe1177d6c7 (qt/qtmultimedia/dev) fe1177d6c7 (qt/tqtc-qtmultimedia/dev) 1dfafa0e74 (qt/qtmultimedia/6.3) 1dfafa0e74 (qt/tqtc-qtmultimedia/6.3)

    Description

      The MediaMetaData.Duration value from the MediaPlayer::metaData property is sometimes not in sync with the duration property. The problem occurred with the gstreamer back end.

      To reproduce run the attached QML. The output is sometimes like: 

      qml: DurationChanged: Duration: 05:08, MediaMetaData.Duration: n/a 
      qml: MetaDataChanged: Duration: 05:08, MediaMetaData.Duration: 05:08

       which is ok, but sometimes like: 

      qml: MetaDataChanged: Duration: 00:00, MediaMetaData.Duration: n/a 
      qml: DurationChanged: Duration: 03:24, MediaMetaData.Duration: n/a

       

      Attachments

        1. music.qml
          2 kB
          Bernd Weimer
        For Gerrit Dashboard: QTBUG-102588
        # Subject Branch Project Status CR V

        Activity

          People

            piotr Piotr Srebrny (Inactive)
            bweimer Bernd Weimer
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes