Update metadata after updating media duration

Media duration was sometimes set to 0 in metadata as it was read from
m_duration variable, which is updated asynchronously from gstreambus.
Do metadata parsing after updateding the m_duration variable to avoid
this race.

Fixes: QTBUG-102588
Change-Id: Id7514c73c7668f589e0a209f8fdf00a86e8a1208
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
(cherry picked from commit fe1177d6c771b8195284f2e6f2f0876790b07c03)
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>